--- a/player/current/config.ini
+++ b/player/current/config.ini
@@ -8,7 +8,7 @@ pidfile=/tmp/neoplayer.pid
 stdin=/dev/null
 stdout=stdout.txt
 stderr=stderr.txt
-log=log.txt
+logfile=log.txt
 
 [account]
 username=
