--- a/player/config.ini
+++ b/player/config.ini
@@ -8,7 +8,7 @@ pidfile=/tmp/neoplayer.pid
 stdin=/dev/null
 stdout=stdout.txt
 stderr=stderr.txt
-logfile=log.txt
+logfile=log.out
 
 [account]
 username=
